<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">JustJava</string>
    <string name="toppings">Toppings</string>
    <string name="your_name">Your Name</string>
    <string name="whopping_cream">Whopping cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order_summary">Order Summary</string>
    <string name="order">Order</string>
    <string name="thank_you">Thank You!</string>
    <string name="total">Total</string>
    <string name="add_chocolate">Add Chocolate</string>
    <string name="add_whipped_cream">Add Whipped cream</string>
    <string name="order_summary_name">Name <xliff:g id="name" example="Amy" /></string>
    <string name="send_email_using">Send Email using</string>
    <string name="order_for">order for</string>
</resources>