<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="32dp"
    android:orientation="vertical"
    android:animateLayoutChanges="true"
    tools:context=".MainActivity">


    <EditText
        style="@style/editText"
        android:id="@+id/your_name_edittext"
        android:autofillHints="@string/your_name"
        android:hint="@string/your_name"
        android:inputType="textPersonName" />

    <TextView
        style="@style/title"
        android:text="@string/toppings"/>

        <CheckBox
            style="@style/checkbox"
            android:id="@+id/whipped_cream_checkbox"
            android:text="@string/whopping_cream" />
        <CheckBox
            style="@style/checkbox"
            android:id="@+id/chocolate_checkbox"
            android:text="@string/chocolate" />

        <TextView
            style="@style/title"
            android:text="@string/quantity"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:onClick="decrement"
                android:text="-"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:text="1"
                android:textSize="18sp"
                tools:ignore="HardcodedText" />

            <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:onClick="increment"
                android:text="+"
                android:textColor="@color/white"
                tools:ignore="HardcodedText" />
        </LinearLayout>



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitOrder"
            android:text="@string/order"
            android:textAllCaps="true" />

</LinearLayout>